--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -4,14 +4,20 @@ body {
     padding: 0;
     margin: 0;
     
-    .page-header{
+    .page-header-autogeo{
     	border-bottom: 1px solid #d3d8db;
     	font-weight:500;
     	color: #595959;
+    	width: 100%;
+    	float:left;
+    	margin: 25px 0;
     	
     	h3{
     		color: #4c5557;
-    		font-weight: 200;
+    		font-weight: 400;
+    		padding: 0;
+		    margin: 0;
+		    line-height: 45px;
     	}
 
     	.help-block{
@@ -309,6 +315,12 @@ header{
 .filtroMarca.ativo{
 	background: url('../img/icones/marca.png') no-repeat center #FFF;
 }
+.filtroModelo{
+	background: url('../img/icones/modelo_filtro.png') no-repeat center;
+}
+.filtroModelo.ativo{
+	background: url('../img/icones/modelo.png') no-repeat center #FFF;
+}
 .filtroKm{
 	background: url('../img/icones/km_filtro.png') no-repeat center;
 }
@@ -385,11 +397,11 @@ header{
 	background-color: transparent;
 	width: 120px;
 	height: 40px;
-	line-height: 40px;
+	line-height: 37px;
 	border:1px solid #35b7ce;
 	color: #35b7ce;
 	font-size: 13px;
-	font-weight:normal;
+	font-weight:200;
 	border-radius:3px;
 	
 	&:hover{
@@ -403,11 +415,11 @@ header{
 	background-color: transparent;
 	width: 120px;
 	height: 40px;
-	line-height: 40px;
+	line-height: 37px;
 	border:1px solid #e05050;
 	color: #e05050;
 	font-size: 13px;
-	font-weight:normal;
+	font-weight:200;
 	margin-right: 10px;
 	border-radius:3px;
 	
@@ -467,19 +479,44 @@ header{
 	margin-top: 30px;
 	width: 120px;
 	height: 40px;
-	line-height: 40px;
-	border:1px solid $cor-principal;
-	color: #FFF;
+	line-height: 37px;
+	border:1px solid #0482d6;
+	color: #0482d6;
 	font-size: 13px;
-	font-weight:normal;
+	font-weight:200;
 	border-radius:3px;
 	padding:0;
-	background-color: $cor-principal;
+	background-color: transparent;
 	text-decoration: none;
 	
 	&:hover{
 		background-color: #0482d6;
 		border:1px solid #0482d6;
+		color: #FFF;
+		-webkit-transition: background-color 0.5s ease;
+		-moz-transition: background-color 0.5s ease;
+		-o-transition: background-color 0.5s ease;
+		transition: background-color 0.5s ease;
+	}
+}
+.btnFavorito{
+	float: right;
+	margin-top: 30px;
+	width: 120px;
+	height: 40px;
+	line-height: 37px;
+	border:1px solid #f43535;
+	color: #f43535;
+	font-size: 13px;
+	font-weight:200;
+	border-radius:3px;
+	padding:0;
+	background-color: transparent;
+	text-decoration: none;
+	
+	&:hover{
+		background-color: #f43535;
+		border:1px solid #f43535;
 		color: #FFF;
 		-webkit-transition: background-color 0.5s ease;
 		-moz-transition: background-color 0.5s ease;
@@ -518,21 +555,98 @@ header{
 	
 	li{
 		list-style: none;
-	    padding: 5px;
-	    background: #FFF;
-	    height: 130px;
-	    margin: 10px 0 10px 0;
-	    box-shadow: 0px 1px 0px #d4d7d8;
-	    border-radius: 3px;
-	    border: 1px solid #eaedef;
+	    background: transparent;
+        display: inline-block;
+		margin-bottom: 25px;
 		
-		div{
-			padding:0;
+		.divAnuncio.favoritos{
+			height: 420px;
+		}
 		
-			img{
+		.divAnuncio{
+		    height: 380px;
+		    background: #FFF;
+		    box-shadow: 0px 1px 0px #d4d7d8;
+		    border: 1px solid #eff1f2;
+		    border-radius: 3px;
+			padding: 0px;
+		
+			.imgAnuncio{
+				line-height: 180px;
+				max-height: 180px;
+			    min-width: 100%;
+			    max-width: 100%;
+			    float:left;
+				
+				img{
+		    		vertical-align: middle;
+		    		max-width: 100%;
+		    		max-height: 180px;
+		    		margin: 0 auto;
+	    			display: block;
+				}
+			}
+			
+			.divBtnAnuncio{
+				padding:10px;
+				
+				.btnCadastro{
+					margin:0px;
+					height:33px;
+					line-height:30px;
+					width: 100%; 
+				}
+				
+				.btnFavorito{
+					margin:5px 0px 0px 0px;
+					height:33px;
+					line-height:30px;
+					width: 100%; 
+				}
+			}	
+			table{
 				padding:0;
-				border: 1px solid #eaedef;
-    			border-radius: 3px;
+				margin-left:10px;
+				margin-top:5px;
+				
+				th{
+					font-weight: 400;
+					text-align: left;
+					text-transform: uppercase;
+					font-size:0.9em;
+					color: #8b9293;
+				}
+				td{
+					font-size:0.9em;
+					font-weight: 400;
+					text-align: left;
+					padding:5px;
+					line-height: 24px;
+					
+					.icone{
+					    display: block;
+					    height: 24px;
+					    width: 24px;
+					    margin: 0 auto;
+					    text-align: center;
+					    float: left;
+					    margin-right: 10px;
+					}
+					
+					.preco{
+						font-weight:500;
+					}
+				}
+			}
+			.btnView{
+			    height: 139px;
+			    background:#efefef;
+			    color: #8e8e8e;
+			    cursor:pointer;
+			    width: 40px;
+			    text-align: center;
+			    line-height: 140px;
+			    font-size: 14pt;
 			}
 		}
 	}
