--- a/src/main/webapp/views/anuncios.html
+++ b/src/main/webapp/views/anuncios.html
@@ -2,44 +2,42 @@
 
 <div class="col-sm-8 col-sm-offset-2">
 	
-	<div class="page-header">
-		<h3 class="text-left">Meus Anúncios Cadastrados</h3>
+	<div class="page-header-autogeo">
+		<h3 class="text-left col-xs-8">Meus Anúncios</h3>
+		<button class="btn btnCadastro pull-right" ng-click="go('/cadastro/anuncio')" style="margin:0">Novo Anúncio
+			<span class="glyphicon glyphicon-plus"></span>
+		</button>
 	</div>
 	
 	<div>
-		<div>
-			<button class="btn btnCadastro pull-left" style="margin:0">Novo anúncio
-				<span class="glyphicon glyphicon-plus"></span>
-			</button>
-		</div>
 		<ul id="listaAnuncios">
-			<li class="col-sm-12 pull-left" ng-repeat="anuncio in anuncios">
-				<div class="col-sm-3">
-					<img src="./build/img/carro.jpg" width="150" height="120" alt="carro"/>
-				</div>
-				<div class="col-sm-9">
-					<table class="col-sm-8">
-						<thead>
-							<tr>
-								<th>PREÇO</th>
-								<th>MARCA</th>
-								<th>MODELO</th>
-								<th>COR</th>
-								<th>ANO</th>
-								<th>KM</th>
-							</tr>
-						</thead>
+			<li class="col-xs-6 col-sm-6 col-md-6 col-lg-4 pull-left" ng-repeat="anuncio in anuncios">
+				<div class="divAnuncio">
+					<div class="imgAnuncio">
+						<img src="./build/img/carro2.jpg" alt="Automóvel" title="Automóvel"/>
+					</div>
+					<table class="col-sm-11">
 						<tbody>
+							<tr class="preco">
+								<td><span class="icone filtroPreco ativo"></span>{{anuncio.properties.valor | currency:"R$" :2}}</td>
+							</tr>
 							<tr>
-								<td>{{anuncio.properties.valor}}</td>
-								<td>{{anuncio.properties.marca}}</td>
-								<td>{{anuncio.properties.modelo}}</td>
-								<td>{{anuncio.properties.cor}}</td>
-								<td>{{anuncio.properties.ano}}</td>
-								<td>{{anuncio.properties.km}}</td>
+								<td><span class="icone filtroMarca ativo"></span>{{anuncio.properties.marca}}</td>
+							</tr>
+							<tr>
+								<td><span class="icone filtroModelo ativo"></span>{{anuncio.properties.modelo}}</td>
+							</tr>
+							<tr>
+								<td><span class="icone filtroCalendar ativo"></span>{{anuncio.properties.ano}}</td>
+							</tr>
+							<tr>
+								<td><span class="icone filtroKm ativo"></span>{{anuncio.properties.km}}</td>
 							</tr>
 						</tbody>
 					</table>
+					<div class="col-xs-12 divBtnAnuncio">
+						<button class="btnCadastro pull-left">Visualizar Todo Anúncio</button>
+					</div>
 				</div>
 			</li>
 		</ul>
