--- a/src/main/webapp/views/cadastro.html
+++ b/src/main/webapp/views/cadastro.html
@@ -6,7 +6,7 @@
 		<alert ng-repeat="alert in alerts" type="{{alert.type}}">{{alert.msg}}</alert>
 	</div>
 	
-	<div class="page-header">
+	<div class="page-header-autogeo">
 		<h3 class="text-center">Dados Pessoais</h3>
 		<span class="help-block text-center">Preencha os campos do formulário abaixo com suas informações pessoais.</span>
 	</div>
@@ -57,7 +57,7 @@
 				</div>
 			</div>	
 				
-			<div class="page-header">
+			<div class="page-header-autogeo">
 				<h3 class="text-center">Dados de Login</h3>
 				<span class="help-block text-center">Preencha os dados de seu login para acessar o sistema.</span>
 			</div>	
