--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -12,6 +12,10 @@ body {
     	float:left;
     	margin: 25px 0;
     	
+    	button{
+    		margin-top: -15px;
+    	}
+    	
     	h3{
     		color: #4c5557;
     		font-weight: 400;
@@ -559,7 +563,7 @@ header{
 		    height: 380px;
 		    background: #FFF;
 		    box-shadow: 0px 1px 0px #d4d7d8;
-		    border: 1px solid #eff1f2;
+		    border: 1px solid #e1e5e8;
 		    border-radius: 3px;
 			padding: 0px;
 		
