--- a/src/main/webapp/views/anuncios.html
+++ b/src/main/webapp/views/anuncios.html
@@ -4,7 +4,8 @@
 	
 	<div class="page-header-autogeo">
 		<h3 class="text-left col-xs-8">Meus Anúncios</h3>
-		<button class="btn btnCadastro pull-right" ng-click="go('/cadastro/anuncio')" style="margin:0">Novo Anúncio
+		<span class="help-block text-left pull-left">Os anúncios que você publicou estão listados abaixo.</span>
+		<button class="btn btnCadastro pull-right" ng-click="go('/cadastro/anuncio')">Novo Anúncio
 			<span class="glyphicon glyphicon-plus"></span>
 		</button>
 	</div>
