--- a/src/main/webapp/views/favoritos.html
+++ b/src/main/webapp/views/favoritos.html
@@ -3,6 +3,7 @@
 <div class="col-sm-8 col-sm-offset-2">
 	<div class="page-header-autogeo">
 		<h3 class="text-left">Meus Favoritos</h3>
+		<span class="help-block text-left pull-left">Os anúncios que você marcou como favirito estão listados abaixo.</span>
 	</div>
 	
 	<div>
