--- a/src/main/webapp/partials/modal.html
+++ b/src/main/webapp/partials/modal.html
@@ -3,9 +3,19 @@
 <div class="modal-header">
 	<h3 class="modal-title">Detalhes do Anúncio</h3>
 </div>
- <div class="modal-body">
-     Anuncio: {{ anuncio}}
- </div>
+ 
+<div class="modal-body">
+	<div>
+		<div style="height: 200px">
+			<carousel interval="2000" no-wrap="false"> 
+				<slide ng-repeat="slide in anuncio.properties.fotos" active="slide.active"> 
+					<img ng-src="{{slide.nome}}" style="margin: auto;max-width: 100%;max-height: 220px;">
+				</slide> 
+			</carousel>
+		</div>
+	</div>
+</div>
+ 
  <div class="modal-footer">
-     <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+     <button class="btn btn-primary" type="button" ng-click="ok()">Fechar</button>
  </div>
