--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -673,6 +673,9 @@ header{
 		.tituloValor{
 			font-weight: bold;
 			font-size: 1.4em;
+			width: 110px;
+		    float: right;
+    		text-align: left;
 		}
 		.descricao{
 	    	font-size: 0.9em;
