--- a/src/main/webapp/partials/modal.html
+++ b/src/main/webapp/partials/modal.html
@@ -3,11 +3,12 @@
 <div class="modal-body">
 	<div>
 		<div style="height: 200px">
-			<carousel interval="2000" no-wrap="false"> 
+			<carousel interval="2000" no-wrap="false" ng-hide="anuncio.properties.fotos == null"> 
 				<slide ng-repeat="slide in anuncio.properties.fotos" active="slide.active"> 
 					<img ng-src="{{slide.nome}}" style="margin: auto;max-width: 100%;max-height: 220px;">
 				</slide> 
 			</carousel>
+			<img ng-src="./build/img/carro2.jpg" ng-show="anuncio.properties.fotos == null" style="display:block;margin: 0 auto;max-width: 100%;max-height: 220px;">
 		</div>
 		<div style="margin-top:15px;">
 			<h4 class="pull-right" style="color:#0065AE;font-weight:400;">Preço: {{anuncio.properties.valor | currency:R$}}</h4>
@@ -21,7 +22,7 @@
 						<th>Ano</th>
 						<th>KM</th>
 						<th>Cor</th>
-						<th>Portas</th>
+						<th>Estado</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -31,7 +32,7 @@
 						<td>{{anuncio.properties.ano}}</td>
 						<td>{{anuncio.properties.km}}</td> 
 						<td>{{anuncio.properties.cor}}</td>
-						<td>{{anuncio.properties.portas}}</td>
+						<td>{{(anuncio.properties.estado == 1) ? 'Zero' : 'Usado'}}</td>
 					</tr>
 				</tbody>
 			</table>
@@ -40,7 +41,7 @@
 		<tabset justified="true" style="margin: 25px 0 0 0;">
 			<tab heading="Acessórios">
 				<div style="margin-top:25px">
-					<span class="badge fundoAzul" style="padding:6px;margin:8px;font-weight:300;font-size:10pt;" ng-repeat="acessorio in anuncio.properties.acessorios">{{acessorio.nome}}</span>
+					<span class="badge fundoAzul" style="padding:6px;margin:8px;font-weight:300;font-size:10pt;" ng-repeat="acessorio in anuncio.properties.acessorios">{{acessorio.acessorio}}</span>
 				</div>
 			</tab>
 			<tab heading="Contato">
@@ -54,7 +55,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>{{anuncio.properties.contato.nomeCompleto}}</td>
+							<td>{{anuncio.properties.contato.nome}}</td>
 							<td>{{anuncio.properties.contato.telefone}}</td>
 							<td>{{anuncio.properties.contato.email}}</td>
 						</tr>
