--- a/src/main/webapp/partials/modal.html
+++ b/src/main/webapp/partials/modal.html
@@ -3,12 +3,17 @@
 <div class="modal-body">
 	<div>
 		<div style="height: 200px">
-			<carousel interval="2000" no-wrap="false" ng-hide="anuncio.properties.fotos == null"> 
-				<slide ng-repeat="slide in anuncio.properties.fotos" active="slide.active"> 
-					<img ng-src="{{slide.nome}}" style="margin: auto;max-width: 100%;max-height: 220px;">
+			<carousel interval="2000" no-wrap="false"> 
+				<slide active="slide.active"> 
+					<img ng-src="./build/img/car.jpg" style="margin: auto;max-width: 100%;max-height: 220px;">
+				</slide> 
+				<slide> 
+					<img ng-src="./build/img/carro2.jpg" style="margin: auto;max-width: 100%;max-height: 220px;">
+				</slide> 
+				<slide> 
+					<img ng-src="./build/img/carro.jpg" style="margin: auto;max-width: 100%;max-height: 220px;">
 				</slide> 
 			</carousel>
-			<img ng-src="./build/img/carro2.jpg" ng-show="anuncio.properties.fotos == null" style="display:block;margin: 0 auto;max-width: 100%;max-height: 220px;">
 		</div>
 		<div style="margin-top:15px;">
 			<h4 class="pull-right" style="color:#0065AE;font-weight:400;">Preço: {{anuncio.properties.valor | currency:R$}}</h4>
