--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -764,3 +764,10 @@ header{
 .nav-tabs.nav-justified > .active > a{
 	background:#FFF;
 }
+#formCadastro label{
+	padding:0px 5px 0px 5px;
+	line-height: 40px;
+}
+#formCadastro input{
+	padding:0px 5px 0px 5px;
+}
