--- a/src/main/webapp/views/favoritos.html
+++ b/src/main/webapp/views/favoritos.html
@@ -7,37 +7,40 @@
 	</div>
 	
 	<div>
-		<ul id="listaAnuncios">
-			<li class="col-xs-6 col-sm-6 col-md-6 col-lg-4 pull-left" ng-repeat="anuncio in anuncios | limitTo: 4">
-				<div class="divAnuncio favoritos">
-					<div class="imgAnuncio">
-						<img src="./build/img/carro2.jpg" alt="Automóvel" title="Automóvel"/>
-					</div>
-					<table class="col-sm-11">
-						<tbody>
-							<tr class="preco">
-								<td><span class="icone filtroPreco ativo"></span>{{anuncio.properties.valor | currency:"R$" :2}}</td>
-							</tr>
-							<tr>
-								<td><span class="icone filtroMarca ativo"></span>{{anuncio.properties.marca}}</td>
-							</tr>
-							<tr>
-								<td><span class="icone filtroModelo ativo"></span>{{anuncio.properties.modelo}}</td>
-							</tr>
-							<tr>
-								<td><span class="icone filtroCalendar ativo"></span>{{anuncio.properties.ano}}</td>
-							</tr>
-							<tr>
-								<td><span class="icone filtroKm ativo"></span>{{anuncio.properties.km}}</td>
-							</tr>
-						</tbody>
-					</table>
-					<div class="col-xs-12 divBtnAnuncio">
-						<button class="btnCadastro pull-left">Visualizar no Mapa</button>
-						<button class="btnFavorito pull-left">Excluir dos Favoritos</button>
-					</div>
-				</div>
-			</li>
-		</ul>
+		<div style="margin-top: 15px;clear:both;">
+			<alert type="warning">Você não pussui nenhum anúncio marcado como favorito.</alert>
+		</div>
+<!-- 		<ul id="listaAnuncios"> -->
+<!-- 			<li class="col-xs-6 col-sm-6 col-md-6 col-lg-4 pull-left" ng-repeat="anuncio in anuncios | limitTo: 4"> -->
+<!-- 				<div class="divAnuncio favoritos"> -->
+<!-- 					<div class="imgAnuncio"> -->
+<!-- 						<img src="./build/img/carro2.jpg" alt="Automóvel" title="Automóvel"/> -->
+<!-- 					</div> -->
+<!-- 					<table class="col-sm-11"> -->
+<!-- 						<tbody> -->
+<!-- 							<tr class="preco"> -->
+<!-- 								<td><span class="icone filtroPreco ativo"></span>{{anuncio.properties.valor | currency:"R$" :2}}</td> -->
+<!-- 							</tr> -->
+<!-- 							<tr> -->
+<!-- 								<td><span class="icone filtroMarca ativo"></span>{{anuncio.properties.marca}}</td> -->
+<!-- 							</tr> -->
+<!-- 							<tr> -->
+<!-- 								<td><span class="icone filtroModelo ativo"></span>{{anuncio.properties.modelo}}</td> -->
+<!-- 							</tr> -->
+<!-- 							<tr> -->
+<!-- 								<td><span class="icone filtroCalendar ativo"></span>{{anuncio.properties.ano}}</td> -->
+<!-- 							</tr> -->
+<!-- 							<tr> -->
+<!-- 								<td><span class="icone filtroKm ativo"></span>{{anuncio.properties.km}}</td> -->
+<!-- 							</tr> -->
+<!-- 						</tbody> -->
+<!-- 					</table> -->
+<!-- 					<div class="col-xs-12 divBtnAnuncio"> -->
+<!-- 						<button class="btnCadastro pull-left">Visualizar no Mapa</button> -->
+<!-- 						<button class="btnFavorito pull-left">Excluir dos Favoritos</button> -->
+<!-- 					</div> -->
+<!-- 				</div> -->
+<!-- 			</li> -->
+<!-- 		</ul> -->
 	</div>
 </div>
