--- a/src/main/webapp/partials/modal.html
+++ b/src/main/webapp/partials/modal.html
@@ -1,6 +1,9 @@
 <meta charset="UTF-8">
  
 <div class="modal-body">
+	<div style="margin-top: 25px;">
+		<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="2200" close="closeAlert($index)">{{alert.msg}}</alert> 
+	</div>
 	<div>
 		<div style="height: 200px">
 			<carousel interval="2000" no-wrap="false"> 
@@ -15,8 +18,12 @@
 				</slide> 
 			</carousel>
 		</div>
-		<div style="margin-top:15px;">
-			<h4 class="pull-right" style="color:#0065AE;font-weight:400;">Preço: {{anuncio.properties.valor | currency:R$}}</h4>
+		<div style="margin-top:25px;">
+			<h4 class="pull-right" style="color:#0065AE;font-weight:400;">{{anuncio.properties.valor | currency:R$}}</h4>
+			<div ng-controller="LoginCtrl" ng-show="showElement()">
+				<span ng-show="anuncio.properties.favorito == false" ng-click="favoritar('add')" class="starFavoritar glyphicon glyphicon-star-empty pull-right" tooltip-placement="left" tooltip="Adicionar dos Favoritos"></span>
+				<span ng-show="anuncio.properties.favorito == true" ng-click="favoritar('remove')" class="starFavoritar glyphicon glyphicon-star pull-right" tooltip-placement="left" tooltip="Remover dos Favoritos"></span>
+			</div>
 		</div>
 		<div style="margin:15px 0 15px 0;">
 			<table class="table">
