--- a/src/main/webapp/views/anuncios.html
+++ b/src/main/webapp/views/anuncios.html
@@ -41,7 +41,7 @@
 						</tbody>
 					</table>
 					<div class="col-xs-12 divBtnAnuncio">
-						<button class="btnFavorito pull-left" ng-click="go('/anuncio/editar/'+anuncio.id)">Editar Anúncio</button>
+						<button class="btnFavorito pull-left" style="margin:0" ng-click="go('/anuncio/editar/'+anuncio.id)">Editar Anúncio</button>
 					</div>
 				</div>
 			</li>
