--- a/src/main/webapp/sources/sass/main.scss
+++ b/src/main/webapp/sources/sass/main.scss
@@ -779,3 +779,15 @@ header{
     margin: 7px;
     cursor: pointer;
 }
+.imgCadastro{
+	width:128px;
+	height:128px;
+	display:block;
+	margin:0 auto;
+}
+.particular{
+	background: url('../img/particular.png') no-repeat center;
+}
+.revenda{
+	background: url('../img/revenda.png') no-repeat center;
+}
