--- a/src/main/webapp/views/cadastro.html
+++ b/src/main/webapp/views/cadastro.html
@@ -3,7 +3,7 @@
 <div class="col-sm-6 col-sm-offset-3">
 	
 	<div style="margin-top: 25px;">
-		<alert ng-repeat="alert in alerts" type="{{alert.type}}">{{alert.msg}}</alert> 
+		<alert ng-repeat="alert in alerts" type="{{alert.type}}" dismiss-on-timeout="2000" close="closeAlert($index)">{{alert.msg}}</alert> 
 	</div>
 	
 	<div class="page-header-autogeo">
@@ -12,7 +12,7 @@
 	</div>
 	
 	<div class="formContainer">
-		<form class="form-horizontal" id="formCadastro">
+		<form class="form-horizontal" id="formCadastro" novalidate>
 			<div class="form-group">
 				<label for="nome" class="col-sm-2 control-label">Nome</label>
 			    <div class="col-sm-4">
@@ -61,6 +61,55 @@
 				<h3 class="text-center">Dados da Empresa</h3>
 				<span class="help-block text-center">Preencha os dados da sua empresa.</span>
 			</div>	
+			
+			<div class="form-group" ng-show="tipo == 'revenda'">
+				<label for="nome" class="col-sm-2 control-label">Razão Social</label>
+			    <div class="col-sm-4">
+					<input type="text" class="form-control" name="razaoSocial" id="razaoSocial" placeholder="Razão Social" required ng-model="user.loja.razaoSocial">
+			    </div>
+			    <label for="sobrenome" class="col-sm-2 control-label">Nome Fantasia</label>
+				<div class="col-sm-4">
+					<input type="text" class="form-control" id="nomeFantasia" placeholder="Nome Fantasia" ng-model="user.loja.nomeFantasia">
+				</div>
+			</div>
+			<div class="form-group" ng-show="tipo == 'revenda'">
+				<label for="nome" class="col-sm-2 control-label">Cnpj</label>
+			    <div class="col-sm-4">
+					<input type="text" class="form-control" name="cnpj" id="cnpj" ui-br-cnpj-mask placeholder="Cnpj" required ng-model="user.loja.cnpj">
+			    </div>
+			    <label for="sobrenome" class="col-sm-2 control-label">Telefone</label>
+				<div class="col-sm-4">
+					<input type="text" class="form-control" id="telefone" ui-br-phone-number placeholder="Telefone" ng-model="user.loja.telefone">
+				</div>
+			</div>
+			<div class="form-group" ng-show="tipo == 'revenda'">
+				<label for="nome" class="col-sm-2 control-label">Email</label>
+			    <div class="col-sm-10">
+					<input type="email" class="form-control" name="emailLoja" id="emailLoja" placeholder="Email" required ng-model="user.loja.email">
+			    </div>
+			</div>
+			
+			<div class="page-header-autogeo" ng-show="tipo == 'revenda'">
+				<h3 class="text-left col-xs-12">Localização</h3>
+				<span class="help-block text-left pull-left">Posicione no mapa abaixo a localização do seu estabelecimento, esta localização será usada no momento de publicar um automóvel para venda.</span>
+			</div>
+			
+			<div class="form-group" ng-show="tipo == 'revenda'">
+			    <label for="endereco" class="col-sm-3 control-label">Digite o Endereço</label>
+			    <div class="col-sm-5">
+					<input type="text" class="form-control" id="endereco" placeholder="Ex: rua xxx, av. yyyy">
+			    </div>
+			    <div class="col-sm-3">
+			    	<button class="btnCadastro" style="margin:0">
+			    		<span class="glyphicon glyphicon-search"></span>
+			    		Buscar
+		    		</button>
+			    </div>
+			</div>
+			
+			<div class="form-group" style="padding:15px;" ng-show="tipo == 'revenda'">
+				<leaflet defaults="defaults" center="center" markers="markers" width="100%" height="300"></leaflet>
+			</div>
 			
 			<div class="form-group">
 				<div class="col-sm-11">
