--- a/src/main/webapp/views/tipoCadastro.html
+++ b/src/main/webapp/views/tipoCadastro.html
@@ -1,6 +1,27 @@
 <meta charset="UTF-8">
 
-<div class="col-sm-6 col-sm-offset-3">
-	<button type="submit" class="btn btnCadastro" ng-click="go('cadastro/particular')">Cadastrar Particular</button>
-	<button type="submit" class="btn btnCadastro" ng-click="go('cadastro/revenda')">Cadastrar Revenda</button>
-</div>
+
+
+<div class="col-sm-8  col-sm-offset-2">
+	
+	<div class="page-header-autogeo">
+		<h3 class="text-left col-xs-12">Selecione o tipo de cadastro</h3>
+	</div>
+
+	<div class="col-sm-6" style="border-right:1px solid #DDD;height:310px;margin-top: 50px;">
+		<span class="imgCadastro particular"></span>
+		<h5 class="text-center">Cadastro de Usuário Particular</h5>
+		<div style="height:60px;">
+			<p>Cadastre seu usuário para começar a anunciar seus automóveis.</p>
+		</div>
+		<button type="submit" class="btn btnCadastro" ng-click="go('cadastro/particular')">Cadastro Particular</button>
+	</div>
+	<div class="col-sm-6" style="margin-top: 50px;">
+		<span class="imgCadastro revenda"></span>
+		<h5 class="text-center">Cadastro de Revenda/Loja</h5>
+		<div style="height:60px;">
+			<p>Cadastre seu estabelecimento comercial e começe a publicar seus automóveis agora mesmo.</p>
+		</div>
+		<button type="submit" class="btn btnCadastro" ng-click="go('cadastro/revenda')">Cadastro Revenda</button>
+	</div>
+</div>	
