--- a/src/main/webapp/views/favoritos.html
+++ b/src/main/webapp/views/favoritos.html
@@ -16,7 +16,7 @@
 		<div style="margin-top: 15px;clear:both;" ng-hide="anuncios.length > 0">
 			<alert type="warning">Você não pussui nenhum anúncio marcado como favorito.</alert>
 		</div>
-		<ul id="listaAnuncios">
+		<ul id="listaAnuncios" class="col-xs-12 pull-left">
 			<li class="col-xs-6 col-sm-6 col-md-6 col-lg-4 pull-left" ng-repeat="anuncio in anuncios">
 				<div class="divAnuncio" style="height:430px;">
 					<div class="imgAnuncio">
