--- a/src/main/webapp/views/anuncios.html
+++ b/src/main/webapp/views/anuncios.html
@@ -15,7 +15,7 @@
 		<div style="margin-top: 15px;clear:both;" ng-hide="anuncios.length > 0">
 			<alert type="warning">Você não pussui nenhum anúncio cadastrado ainda.<a href="#/anuncio/novo">Cadastrar Anúncio</a></alert>
 		</div>
-		<ul id="listaAnuncios">
+		<ul id="listaAnuncios" class="col-xs-12 pull-left">
 			<li class="col-xs-6 col-sm-6 col-md-6 col-lg-4 pull-left" ng-repeat="anuncio in anuncios">
 				<div class="divAnuncio">
 					<div class="imgAnuncio">
