--- a/src/main/webapp/views/cadastroAnuncio.html
+++ b/src/main/webapp/views/cadastroAnuncio.html
@@ -119,6 +119,24 @@
 				<leaflet defaults="defaults" center="center" markers="markers" width="100%" height="300"></leaflet>
 			</div>
 			
+			<div class="page-header-autogeo" ng-hide="isLoja">
+				<h3 class="text-left col-xs-12">Fotos</h3>
+				<span class="help-block text-left pull-left">Selecione as fotos que deseja publicar neste anúncio. Você pode selecionar até 3 fotos.</span>
+			</div>
+			
+			<div class="form-group">
+				<label for="fotos" class="col-sm-3 control-label">Fotos</label>
+			    <div class="col-sm-8">
+					<input type="file" file-upload multiple/>
+			    </div>
+			</div>
+			
+			<div class="form-group">
+				<ul>
+			        <li ng-repeat="file in files">{{file.name}}</li>
+			    </ul>
+			</div>
+			
 			<div class="form-group">
 				<div class="col-sm-12">
 					<button type="submit" class="btn btnCadastro" ng-click="cadastrarAnuncio()">
