--- a/src/main/webapp/views/anuncios.html
+++ b/src/main/webapp/views/anuncios.html
@@ -19,7 +19,8 @@
 			<li class="col-xs-6 col-sm-6 col-md-6 col-lg-4 pull-left" ng-repeat="anuncio in anuncios">
 				<div class="divAnuncio">
 					<div class="imgAnuncio">
-						<img src="./build/img/carro2.jpg" alt="Automóvel" title="Automóvel"/>
+						<img ng-show="anuncio.fotos.length == 0" src="./build/img/no-foto.jpg" alt="Automóvel" title="Automóvel"/>						
+						<img ng-show="anuncio.fotos.length > 0" ng-src="./build/img/{{anuncio.usuario.id}}/{{anuncio.fotos[0].nome}}" alt="Automóvel" title="Automóvel"/>
 					</div>
 					<table class="col-sm-11">
 						<tbody>
