--- a/src/main/webapp/views/anuncios.html
+++ b/src/main/webapp/views/anuncios.html
@@ -20,7 +20,7 @@
 				<div class="divAnuncio">
 					<div class="imgAnuncio">
 						<img ng-show="anuncio.fotos.length == 0" src="./build/img/no-foto.jpg" alt="Automóvel" title="Automóvel"/>						
-						<img ng-show="anuncio.fotos.length > 0" ng-src="./build/img/{{anuncio.usuario.id}}/{{anuncio.fotos[0].nome}}" alt="Automóvel" title="Automóvel"/>
+						<img ng-show="anuncio.fotos.length > 0" ng-src="dados/foto/{{anuncio.id}}/{{anuncio.fotos[0].nome}}" alt="Automóvel" title="Automóvel"/>
 					</div>
 					<table class="col-sm-11">
 						<tbody>
